rancher deploy is working for kub